--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CreditoRecuperado.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CreditoRecuperado.cshtml
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    @using (Html.BeginForm("Buscar", "Cobranza", FormMethod.Post))
+    @using (Html.BeginForm("BuscarCredito", "Cobranza", FormMethod.Post))
     {
         <section class="content home">
             <div class="container-fluid">
@@ -27,7 +27,7 @@
                             <ul class="breadcrumb padding-0">
                                 <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
                                 <li class="breadcrumb-item">Crédito y Cobranza</li>
-                                <li class="breadcrumb-item">Abonos</li>
+                                <li class="breadcrumb-item">Crédito recuperado</li>
                             </ul>
                         </div>
                     </div>
@@ -67,10 +67,14 @@
                                     <div class="row clearfix">
                                         <div class="col-sm-2">
                                             <b>No Cliente:</b>
-                                            @Html.TextBoxFor(m => m[0].IdCliente, new { @class = "form-control"})
+                                            @Html.TextBoxFor(m => m[0].IdCliente, new { @class = "form-control" })
+                                        </div>
+                                        <div class="col-sm-3">
+                                            <b>Ticket:</b>
+                                            @Html.TextBoxFor(m => m[0].Rfc, new { @class = "form-control", placeholder = "Número de ticket" })
                                         </div>
                                         <div class="col-sm-2" style="top:20px">
-                                           @Html.DevExpress().DateEdit(settings =>
+                                            @Html.DevExpress().DateEdit(settings =>
                                                        {
                                                            settings.Name = "FechaRango1";
                                                            settings.Properties.UseMaskBehavior = true;
@@ -97,10 +101,7 @@
                                                            settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
                                                        }).GetHtml()
                                         </div>
-                                        <div class="col-sm-3">
-                                            <b>RFC:</b>
-                                            @Html.TextBoxFor(m => m[0].Rfc, new { @class = "form-control", placeholder = "RFC del cliente" })
-                                        </div>
+
                                         <div class="col-sm-3" style="top:10px">
                                             <div class="form-group">
                                                 <input type="submit" name="Buscar" value="Buscar" class="btn btn-raised btn-primary btn-round float-left" />
@@ -125,18 +126,86 @@
                                     </div>
                                 </div>
                             }
-                            <div class="row clearfix blockquote blockquote-info btn-round">                             
-                                    <div class="table-responsive">
-                                        @Html.Partial("_AbonosPartial", Model)
-                                    </div>                            
+                            <div class="row clearfix blockquote blockquote-info btn-round">
+                                <div class="table-responsive">
+                                    @*<div class="col-lg-12 col-md-12 col-sm-12 blockquote blockquote-info btn-round">
+                                        <div class="table-responsive">*@
+                                    <table class="table table-striped table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th>Ticket</th>
+                                                <th>Fecha Venta</th>
+                                                <th>Fecha Abono</th>
+                                                <th>Cliente</th>
+                                                <th>Importe</th>
+                                                <th>Forma Pago</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            @if (Model != null)
+                                            {
+                                                foreach (var item in Model)
+                                                {
+                                                    <tr>
+                                                        <td>@item.Ticket</td>
+                                                        <td>@item.FechaRegistro</td>
+                                                        <td>@item.FechaRegistro</td>@*<td>@item.Abonos.FechaAbono</td>*@
+                                                        <td>@item.Cliente</td>
+                                                        <td>@item.TotalCargo</td>
+                                                        <td>@item.TotalCargo</td>@*<td>@item.Abonos.MetodoPago</td>*@
+                                                    </tr>
+                                                }
+                                            }
+                                        </tbody>
+                                    </table>
+                                    @*</div>
+                                        </div>*@
+                                </div>
                             </div>
+                            <div class="row clearfix blockquote blockquote-info btn-round">
+                                <div class="table-responsive">
+                                    @*<div class="col-lg-12 col-md-12 col-sm-12 blockquote blockquote-info btn-round">
+                                        <div class="table-responsive">*@
+                                    <table class="table table-striped table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th>Nombre</th>
+                                                <th>Importe</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            @if (Model != null)
+                                            {
+                                                <tr>
+                                                    <td>Total Efectivo</td>
+                                                    <td>@Model[0].TotalEfectivo</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Total Cheques</td>
+                                                    <td>@Model[0].TotalCheques</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Total Transferencia</td>
+                                                    <td>@Model[0].TotalTransferencia</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Total </td>
+                                                    <td>@Model[0].Total</td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </table>
+                                    @*</div>
+                                        </div>*@
+                                </div>
+                            </div>
+
                         </div>
                     </div>
-
                 </div>
-
             </div>
         </section>
     }
 </body>
 </html>
+
